--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://bio.savedsgn.com/'
 languageCode = 'en-us'
 theme = 'hugo-coder'
 languagecode = "en"
